# python-template

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{ cookiecutter.repository_name }}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
{{ cookiecutter.repository_name }}/{{ cookiecutter.project_name }}/: __main__.py
{{ cookiecutter.repository_name }}/{{ cookiecutter.project_name }}/_utils/: constants.py  mplstyles.py
{{ cookiecutter.repository_name }}/{{ cookiecutter.project_name }}/utils/: custom_logging.py  helpers.py  paper.mplstyle  paths.py
