# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = {{ cookiecutter.repository_name|tojson }}
dynamic = ["version"]
requires-python = ">={{ cookiecutter.python_version }}"
authors = [
    { name = {{ cookiecutter.author_name|tojson }}, email = {{ cookiecutter.author_email|tojson }} }
]
description = {{ cookiecutter.description|tojson }}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",{% if cookiecutter.license == "MIT" %}
    "License :: OSI Approved :: MIT License",{% endif %}
]
dependencies = [
    "rich",
    "rich-argparse",
    "mjaf==0.1.0"
]
version = '0.0.0'

[project.optional-dependencies]
dev = [
    'pytest',
    'pre-commit',
    ]


[tool.setuptools.packages.find]
include = ["{{ cookiecutter.project_name }}", "{{ cookiecutter.project_name }}.*"]

[tool.pytest.ini_options]
pythonpath = "."


[tool.isort]
multi_line_output = 3
force_grid_wrap = 2

# [project.urls]

[project.scripts]
{{ cookiecutter.repository_name|tojson }} = "{{ cookiecutter.project_name }}.__main__:main"
